tests/machine/x/fortran/python_math.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/python_math.f90:10:14:

   10 |   root = sqrt(49)
      |              1
Error: ‘x’ argument of ‘sqrt’ intrinsic at (1) must be REAL or COMPLEX

